[project]
name = "time-series-foundation-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chronos-forecasting>=2.2.2",
    "datasetsforecast>=1.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "statsforecast>=2.0.3",
    "timesfm>=1.3.0",
    "streamlit>=1.45.0",
    "plotly>=6.7.0",
]

[tool.uv.sources]
timesfm = { git = "https://github.com/google-research/timesfm.git" }
